--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -29,6 +29,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
+  orderdb:
+    container_name: orderdb
+    environment:
+      - MSSQL_SA_PASSWORD=Abc12345678
+      - ACCEPT_EULA=Y
+    restart: always
+    ports:
+      - "1433:1433"
 
   pgadmin:
     container_name: pgadmin
@@ -70,6 +78,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
@@ -81,6 +90,30 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234"
+    depends_on: 
+      - discountdb
     ports:
       - "8002:80"
+
+
+  discount.grpc:
+    container_name: discount.grpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234"
+    depends_on: 
+      - discountdb
+    ports:
+      - "8003:80"
+
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionStrings:OrderingConnectionString=Server=BERKBANSB;Database=OrderDb;User Id=sa;Password=Abc12345678;"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
 
